# docs/swagger.json
@@ -559,6 +559,32 @@
                         "schema": {
                             "type": "integer"
                         }
+                    },
+                    {
+                        "description": "Task status filter",
+                        "in": "query",
+                        "name": "status",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "Plan visit date lower bound",
+                        "in": "query",
+                        "name": "dateFrom",
+                        "schema": {
+                            "format": "date-time",
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Plan visit date upper bound",
+                        "in": "query",
+                        "name": "dateTo",
+                        "schema": {
+                            "format": "date-time",
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
@@ -629,6 +655,32 @@
                         "name": "offset",
                         "schema": {
                             "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "Task status filter",
+                        "in": "query",
+                        "name": "status",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "Plan visit date lower bound",
+                        "in": "query",
+                        "name": "dateFrom",
+                        "schema": {
+                            "format": "date-time",
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Plan visit date upper bound",
+                        "in": "query",
+                        "name": "dateTo",
+                        "schema": {
+                            "format": "date-time",
+                            "type": "string"
                         }
                     }
                 ],
